all accessible and nice, also added icons

--- a/html_orig/sass/form/_fancy_button_mixins.scss
+++ b/html_orig/sass/form/_fancy_button_mixins.scss
@@ -7,7 +7,7 @@
 	border-radius: 2px;
 	padding: 0 0.6em;
 	border: 0 none;
-	outline: 0 none !important;
+	//outline: 0 none !important;
 	line-height: 1.8em;
 	font-size: 1.1em;
 	margin-bottom: 3px;
