--- a/html_orig/sass/app.scss
+++ b/html_orig/sass/app.scss
@@ -1,4 +1,5 @@
 @import "normalize";
+@import "fontello-embedded";
 @import "lib/bourbon/bourbon";
 
 @import "grid-settings";
@@ -10,6 +11,7 @@ $form-label-w: 160px;
 $form-label-gap: 8px;
 $form-field-w: 250px;
 
+$c-red-outline: #ff0099;
 $c-form-label-fg: white;
 $c-form-field-bg: #3c3c3c;
 $c-form-field-fg: white;
