--- a/html_orig/sass/form/_buttons.scss
+++ b/html_orig/sass/form/_buttons.scss
@@ -31,9 +31,18 @@ button, input[type=submit], .button {
 		min-width: initial;
 	}
 
-	text-shadow: 1.5px 1.5px 2px rgba(black, 0.6);
+	&::before {
+		vertical-align: -1px;
+		margin-left: 0;
+	}
+
+	text-shadow: 1.5px 1.5px 2px rgba(black, 0.4);
 
 	@include fancy-btn-colors($btn-blue-f, $btn-blue-b, $btn-blue-fa, $btn-blue-ba);
+
+	&:focus {
+		outline-color: $c-red-outline;
+	}
 }
 
 //input[type="submit"], .btn-green {
