Fixed a ton of bugs and made almost everything work

--- a/html_orig/sass/pages/_term.scss
+++ b/html_orig/sass/pages/_term.scss
@@ -34,10 +34,11 @@ body.term {
 
 		button {
 			margin: 0 3px;
-			padding: 10px 0;
-			width: 18%;
-			max-width: 65px;
-			min-width: initial;
+			padding: 8px 5px;
+			//width: 18%;
+			min-width: 65px;
+			//max-width: 65px;
+			//min-width: initial;
 			cursor: pointer;
 			font-weight: bold;
 		}
