--- a/html_orig/sass/layout/_box.scss
+++ b/html_orig/sass/layout/_box.scss
@@ -5,6 +5,13 @@
 	margin-top: dist(0);
 	padding: dist(-1) dist(0);
 
+	// clear floats
+	&::after {
+		content: '';
+		display: block;
+		clear: both
+	}
+
 	@include media($phone) {
 		margin-top: dist(-1);
 	}
@@ -20,6 +27,10 @@
 	h2 {
 		margin-top: 0;
 		margin-bottom: 0 !important;
+	}
+
+	p:last-child {
+		margin-bottom: 0.5em;
 	}
 
 	border-radius: 3px;
