--- a/html_orig/sass/layout/_base.scss
+++ b/html_orig/sass/layout/_base.scss
@@ -31,6 +31,11 @@ a:hover {
 }
 
 ul > * {
-	padding-top: .2em;
-	padding-bottom: .2em;
+	padding-top: .3em;
+	padding-bottom: .3em;
+}
+
+ul {
+	margin-top: 0;
+	margin-bottom: 0;
 }
