--- a/html_orig/sass/pages/_term.scss
+++ b/html_orig/sass/pages/_term.scss
@@ -17,7 +17,7 @@ body.term {
 	#screen {
 		@include noselect();
 		font-family: monospace;
-		font-size: 16pt;
+		font-size: 20px;//16pt; - 16pt causes vertical breaks in line drawing characters??
 		white-space: nowrap;
 		background: #111213;
 		padding: 6px;
@@ -27,12 +27,11 @@ body.term {
 		span {
 			white-space: pre;
 			cursor: pointer;
-			&:hover {
-				outline: 1px solid rgba(#ffffff, 0.4);
-				@include media($phone) {
-					outline: 0 none;
-				}
-			}
+
+			display: inline-block;
+			line-height: 1.15em; // this adjusts the spacing
+			width: 0.6em; // horizontal spacing, estimated to be about right
+			overflow: visible;
 		}
 	}
 
