--- a/html_orig/sass/_normalize.scss
+++ b/html_orig/sass/_normalize.scss
@@ -245,7 +245,7 @@ code,
 pre
 //samp
 {
-  font-family: monospace;
+  font-family: "DejaVu Sans Mono", "Inconsolata", monospace;
   font-size: 1em;
 }
 
