--- a/html_orig/sass/layout/_modal.scss
+++ b/html_orig/sass/layout/_modal.scss
@@ -1,4 +1,5 @@
 .Modal {
+	z-index: 100;
 	position: fixed;
 	width: 100%; height: 100%;
 	left: 0; top: 0; right: 0; bottom: 0;
@@ -12,6 +13,21 @@
 	opacity: 0;
 	&.visible { opacity: 1 }
 	&.hidden { display: none }
+
+	&.light {
+		background: rgba(black, .25);
+	}
+
+	@include media($phone) {
+		flex-direction: column;
+		justify-content: flex-start;
+		overflow-y: auto;
+		.Dialog {
+			margin-top: dist(-1) !important;
+			flex-basis: unset;
+			flex-shrink: 0;
+		}
+	}
 }
 
 .Dialog {
@@ -19,16 +35,16 @@
 	padding: dist(0);
 	overflow: hidden;
 
-	max-width: 100%;
-	max-height: 100%;
-	flex: 0 1 30rem;
+	//max-width: 100%;
+	//max-height: 100%;
+	flex-basis: 35rem;
 	//min-height: 15rem;
 
-	background: #1c1c1e;
+	background: $c-modal-bg;//#1c1c1e;
 	border-left: 6px solid $c-form-highlight;
 	border-right: 6px solid $c-form-highlight;
-	border-top: 1px solid $c-form-highlight;
-	border-bottom: 1px solid $c-form-highlight;
+	//border-top: 1px solid $c-form-highlight;
+	//border-bottom: 1px solid $c-form-highlight;
 	box-shadow: 0 0 6px 0 black;
 
 	border-radius: 6px;
